assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 2 shift/reduce
State 17 conflicts: 2 shift/reduce
State 92 conflicts: 9 shift/reduce
State 112 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature
    9             | feature_list feature

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expression ';'
   13        | error ';'

   14 let_attr_list: let_attr
   15              | let_attr_list ',' let_attr

   16 let_attr: OBJECTID ':' TYPEID
   17         | OBJECTID ':' TYPEID ASSIGN expression
   18         | error ','
   19         | error IN

   20 formal_list: %empty
   21            | formal
   22            | formal_list ',' formal

   23 formal: OBJECTID ':' TYPEID

   24 case_list: case
   25          | case_list case

   26 case: OBJECTID ':' TYPEID DARROW expression ';'
   27     | error ';'

   28 expression_list_comma: %empty
   29                      | expression
   30                      | expression_list_comma ',' expression

   31 expression_list_semi: expression_semi
   32                     | expression_list_semi expression_semi

   33 expression_semi: expression ';'
   34                | error ';'

   35 expression: OBJECTID ASSIGN expression
   36           | expression '.' OBJECTID '(' expression_list_comma ')'
   37           | expression '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   38           | OBJECTID '(' expression_list_comma ')'
   39           | IF expression THEN expression ELSE expression FI
   40           | WHILE expression LOOP expression POOL
   41           | '{' expression_list_semi '}'
   42           | LET let_attr_list IN expression
   43           | CASE expression OF case_list ESAC
   44           | NEW TYPEID
   45           | ISVOID expression
   46           | expression '+' expression
   47           | expression '-' expression
   48           | expression '*' expression
   49           | expression '/' expression
   50           | '~' expression
   51           | expression '<' expression
   52           | expression LE expression
   53           | expression '=' expression
   54           | NOT expression
   55           | '(' expression ')'
   56           | OBJECTID
   57           | INT_CONST
   58           | STR_CONST
   59           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 36 37 38 55
    ')' (41) 10 36 37 38 55
    '*' (42) 48
    '+' (43) 46
    ',' (44) 15 18 22 30
    '-' (45) 47
    '.' (46) 36 37
    '/' (47) 49
    ':' (58) 10 11 12 16 17 23 26
    ';' (59) 4 5 6 10 11 12 13 26 27 33 34
    '<' (60) 51
    '=' (61) 53
    '@' (64) 37
    '{' (123) 4 5 10 41
    '}' (125) 4 5 10 41
    '~' (126) 50
    error (256) 6 13 18 19 27 34
    CLASS (258) 4 5
    ELSE (259) 39
    FI (260) 39
    IF (261) 39
    IN (262) 19 42
    INHERITS (263) 5
    LET (264) 42
    LOOP (265) 40
    POOL (266) 40
    THEN (267) 39
    WHILE (268) 40
    CASE (269) 43
    ESAC (270) 43
    OF (271) 43
    DARROW (272) 26
    NEW (273) 44
    ISVOID (274) 45
    STR_CONST <symbol> (275) 58
    INT_CONST <symbol> (276) 57
    BOOL_CONST <boolean> (277) 59
    TYPEID <symbol> (278) 4 5 10 11 12 16 17 23 26 37 44
    OBJECTID <symbol> (279) 10 11 12 16 17 23 26 35 36 37 38 56
    ASSIGN (280) 12 17 35
    NOT (281) 54
    LE (282) 52
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8 9
    let_attr_list <features> (51)
        on left: 14 15
        on right: 15 42
    let_attr <feature> (52)
        on left: 16 17 18 19
        on right: 14 15
    formal_list <formals> (53)
        on left: 20 21 22
        on right: 10 22
    formal <formal> (54)
        on left: 23
        on right: 21 22
    case_list <cases> (55)
        on left: 24 25
        on right: 25 43
    case <case_> (56)
        on left: 26 27
        on right: 24 25
    expression_list_comma <expressions> (57)
        on left: 28 29 30
        on right: 30 36 37 38
    expression_list_semi <expressions> (58)
        on left: 31 32
        on right: 32 41
    expression_semi <expressions> (59)
        on left: 33 34
        on right: 31 32
    expression <expression> (60)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 10 12 17 26 29 30 33 35 36 37 39 40 42 43 45 46 47 48 49 50 51 52 53 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 15
    feature       go to state 16


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 17


State 13

   13 feature: error . ';'

    ';'  shift, and go to state 18


State 14

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 21

    feature  go to state 22


State 16

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 23
    feature       go to state 16


State 18

   13 feature: error ';' .

    $default  reduce using rule 13 (feature)


State 19

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 24

    $default  reduce using rule 20 (formal_list)

    formal_list  go to state 25
    formal       go to state 26


State 20

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 27


State 21

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 22

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 29

    feature  go to state 22


State 24

   23 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


State 25

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   22 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 26

   21 formal_list: formal .

    $default  reduce using rule 21 (formal_list)


State 27

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 33
    ';'     shift, and go to state 34


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 30

   23 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 31

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 37


State 32

   22 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 24

    formal  go to state 38


State 33

   12 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 53


State 34

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   23 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 23 (formal)


State 37

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 54


State 38

   22 formal_list: formal_list ',' formal .

    $default  reduce using rule 22 (formal_list)


State 39

   39 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 55


State 40

   42 expression: LET . let_attr_list IN expression

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_attr_list  go to state 58
    let_attr       go to state 59


State 41

   40 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 60


State 42

   43 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 61


State 43

   44 expression: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 44

   45 expression: ISVOID . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 63


State 45

   58 expression: STR_CONST .

    $default  reduce using rule 58 (expression)


State 46

   57 expression: INT_CONST .

    $default  reduce using rule 57 (expression)


State 47

   59 expression: BOOL_CONST .

    $default  reduce using rule 59 (expression)


State 48

   35 expression: OBJECTID . ASSIGN expression
   38           | OBJECTID . '(' expression_list_comma ')'
   56           | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 56 (expression)


State 49

   54 expression: NOT . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 66


State 50

   55 expression: '(' . expression ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 67


State 51

   50 expression: '~' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 68


State 52

   41 expression: '{' . expression_list_semi '}'

    error       shift, and go to state 69
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression_list_semi  go to state 70
    expression_semi       go to state 71
    expression            go to state 72


State 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 82


State 54

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 83


State 55

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   39           | IF expression . THEN expression ELSE expression FI
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 56

   18 let_attr: error . ','
   19         | error . IN

    IN   shift, and go to state 85
    ','  shift, and go to state 86


State 57

   16 let_attr: OBJECTID . ':' TYPEID
   17         | OBJECTID . ':' TYPEID ASSIGN expression

    ':'  shift, and go to state 87


State 58

   15 let_attr_list: let_attr_list . ',' let_attr
   42 expression: LET let_attr_list . IN expression

    IN   shift, and go to state 88
    ','  shift, and go to state 89


State 59

   14 let_attr_list: let_attr .

    $default  reduce using rule 14 (let_attr_list)


State 60

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   40           | WHILE expression . LOOP expression POOL
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LOOP  shift, and go to state 90
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 61

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   43           | CASE expression . OF case_list ESAC
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    OF   shift, and go to state 91
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 62

   44 expression: NEW TYPEID .

    $default  reduce using rule 44 (expression)


State 63

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   45           | ISVOID expression .
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    $default  reduce using rule 45 (expression)


State 64

   35 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 92


State 65

   38 expression: OBJECTID '(' . expression_list_comma ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    $default  reduce using rule 28 (expression_list_comma)

    expression_list_comma  go to state 93
    expression             go to state 94


State 66

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression
   54           | NOT expression .

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 54 (expression)


State 67

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression
   55           | '(' expression . ')'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ')'  shift, and go to state 95


State 68

   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | '~' expression .
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    $default  reduce using rule 50 (expression)


State 69

   34 expression_semi: error . ';'

    ';'  shift, and go to state 96


State 70

   32 expression_list_semi: expression_list_semi . expression_semi
   41 expression: '{' expression_list_semi . '}'

    error       shift, and go to state 69
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '}'         shift, and go to state 97

    expression_semi  go to state 98
    expression       go to state 72


State 71

   31 expression_list_semi: expression_semi .

    $default  reduce using rule 31 (expression_list_semi)


State 72

   33 expression_semi: expression . ';'
   36 expression: expression . '.' OBJECTID '(' expression_list_comma ')'
   37           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | expression . '<' expression
   52           | expression . LE expression
   53           | expression . '=' expression

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 99


State 73

   52 expression: expression LE . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 100


State 74

   51 expression: expression '<' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 101


State 75

   53 expression: expression '=' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 102


State 76

   46 expression: expression '+' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 103


State 77

   47 expression: expression '-' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 104


State 78

   48 expression: expression '*' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 105


State 79

   49 expression: expression '/' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 106


State 80

   37 expression: expression '@' . TYPEID '.' OBJECTID '(' expression_list_comma ')'

    TYPEID  shift, and go to state 107


State 81

   36 expression: expression '.' . OBJECTID '(' expression_list_comma ')'

    OBJECTID  shift, and go to state 108


State 82

   12 feature: OBJECTID ':' TYPEID ASSIGN expression ';' .

    $default  reduce using rule 12 (feature)


State 83

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 109


State 84

   39 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 110


State 85

   19 let_attr: error IN .

    $default  reduce using rule 19 (let_attr)


State 86

   18 let_attr: error ',' .

    $default  reduce using rule 18 (let_attr)


State 87

   16 let_attr: OBJECTID ':' . TYPEID
   17         | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 111


State 88

   42 expression: LET let_attr_list IN . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 112


State 89

   15 let_attr_list: let_attr_list ',' . let_attr

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_attr  go to state 113


State 90

   40 expression: WHILE expression LOOP . expression POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 114


State 91

   43 expression: CASE expression OF . case_list ESAC

    error     shift, and go to state 115
    OBJECTID  shift, and go to state 116

    case_list  go to state 117
    case       go to state 118


State 92
